--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.com/"
+baseURL = "https://d3e6flv7d47xf4.cloudfront.net/"
 languageCode = "en-us"
 theme = "almeida-cv"
 title = "Example - CV"
