Update content and config with relevant data and values.

--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,8 @@
-baseURL = "/"
+baseURL = "resume.robertalbus.com"
+relativeURLs = true
 languageCode = "en-us"
 theme = "almeida-cv"
-title = "Example - CV"
+title = "Resume - Robert Albus"
 
 [params]
 colorDark = "#2E3532"
